# ROBOTIS-OP3

ROBOTIS-OP3-Demo/op3_foot_step_generator/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Demo/op3_foot_step_generator/include/op3_foot_step_generator/: message_callback.h  robotis_foot_step_generator.h
ROBOTIS-OP3-Demo/op3_foot_step_generator/src/: main.cpp  message_callback.cpp  robotis_foot_step_generator.cpp
ROBOTIS-OP3-Modules/op3_balance_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-OP3-Modules/op3_balance_control/include/op3_balance_control/: op3_balance_control.h
ROBOTIS-OP3-Modules/op3_balance_control/src/: op3_balance_control.cpp
ROBOTIS-OP3-Modules/op3_online_walking_module/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Modules/op3_online_walking_module/include/op3_online_walking_module/: online_walking_module.h  op3_online_walking.h
ROBOTIS-OP3-Modules/op3_online_walking_module/src/: online_walking_module.cpp  op3_online_walking.cpp
ROBOTIS-OP3-Msgs/op3_online_walking_module_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_manager/: CMakeLists.txt  package.xml
op3_manager/src/: op3_manager.cpp
